2002-10-22  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkstatusbar.c (gtk_statusbar_get_type): 
	(gtk_statusbar_class_init): It is called GtkStatusbar, not
	GtkStatusBar. This was changed accidentally during deprecation
	cleanup and caused links in the API docs to break.  (#96390)

Mon Oct 21 14:04:39 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkentry.c (gtk_entry_get_public_chars): Return
	"" for entry->invisible_char == 0, otherwise N copies
	of entry->invisible_char. (#95486, Vitaly Tishkov)

	* gtk/gtkentry.c: Fix a bunch of places where entry->text
	instead of layout->text was being used for computation
	of offsets/indices in the layout. Using layout->text
	is necessary because when the entry is invisible, it
	doesn't correspond to entry->text.

Sun Oct 20 23:58:03 2002  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtkmenu.c, gtkmenubar.c, gtkmenuitem.c, gtkmenushell.c,
	gtkmenushell.h, gtkmenushell.h

	- make the delay before submenus appear below menu bars a
	  GtkSetting
	- make the delay before submenus pops up a GtkSetting
	- make the stay up triangle slightly larger
	- don't pop up the first submenu immediately.
	- make the default delay for submenus 225 ms, and 0 for menubars.
	- make the default delay before popping down inside the stay-up 
	  triangle 1000 ms

	Fixes #74950
	
Sun Oct 20 14:58:02 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkscrolledwindow.c (gtk_scrolled_window_class_init):
	Add a scrollbar_spacing style property (#81396, based
	on a patch from Anders Carlsson)

2002-10-19  Jeremy Katz  <katzj@redhat.com>

	* configure.in: make configure checks for Xrandr and Xinerama
	extensions less noisy (#95858)

Fri Oct 18 16:47:02 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkevents-x11.c (translate_key_event): Handle
	Return and KP_Enter.

Fri Oct 18 15:38:50 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkprogressbar.c (gtk_progress_bar_set_text): 
	Reset use_text_format to %TRUE for a %NULL text string.